syntax = "proto3";

option java_package = "cn.migu.selection.proto.base";

message FreeForCartoonFlowResponse{
     string pluginCode = 1; //组件编号
     string status = 2;		//状态码
     string isvisable = 3;	//数据是否显示
     FreeCartoonData data = 4;			//响应数据
     string messageDesc = 5; //响应消息描述
}

message FreeCartoonData{
	string showType = 1;	//展示种类1:书名;2:书名+作者名;3:书名+点击量;4:书名+章节数;5:书名+文案(即链接描述); 默认1
	string isShowLine = 2;	//是否展示下划线 1：展示 2：不展示 默认1
	repeated  FreeCartoon books = 3; //免费漫画
	map<string, string> ctag = 4;
	string  isMarginTop=5;
	string  isMarginBottom=6;
	string  isPaddingTop = 7;
}

message FreeCartoon{
	string bookShowName = 1;		//图书显示名称
	string bookClickDesc = 2; 	//点击量描述
	string chapterSize = 3;		//章节数
	string authorPenName = 4;	//作者笔名
	string linkDesc = 5;		//文案(即链接描述)
	string picUrl = 6;			//图片链接地址
	string bookDetailUrl = 7;	//图书访问地址
	string cornerShowType = 8;  //角标 0：无 1：免费 2：限免 3：会员 4：完本 5：名家 6：上传
	string bookStatus = 9;		//图书状态 0：连载 1：完本
	string bookId = 10;			//图书id
}